test/expect/cmd.std-c89-src-cxx.stderr.txt
^error: invalid argument '-std=c89' not allowed with 'C\+\+(/ObjC\+\+)?'$
